# clarion

./: .gitignore  CLAUDE.md  README.md  clarion-up.sh
agent/: .env.example  .gitignore  pyproject.toml
agent/clarion/: __init__.py
agent/clarion/actuator/: __init__.py  actuator.py  extension_actuator.py  pipeline.py  relay.py  relay_broker.py
agent/clarion/adapters/: __init__.py  gemini_reasoner.py  minimax_reasoner.py  minimax_synthesizer.py  openai_reasoner.py  tts_vertex.py  voice_livekit.py
agent/clarion/app/: README.md  __init__.py  auto_index.py  demo_mode.py  extension_runtime.py  gov_proof.py  hero_harness.py  kb_beat.py  page_retriever.py  record_fixture.py  record_moss_fixture.py  remember.py  runtime.py  site_indexer.py  structure_freshness.py  voice_entry.py
agent/clarion/contracts/: __init__.py  events.py  ports.py  state.py
agent/clarion/fakes/: __init__.py  adapters.py
agent/clarion/instrument/: __init__.py  baseline.py  publisher.py  timed.py
agent/clarion/kernel/: __init__.py  graph.py  irreversibility.py  negative_verifier.py  policy.py  reasoner_guard.py
agent/clarion/retrieval/: __init__.py  context_ranker.py  ingest_gemini.py  memory_moss.py  moss_client.py  retriever_moss.py
agent/clarion/stages/: __init__.py  checks.py  graph.py  planner.py  predicates.py
agent/clarion/tests/: test_actuator.py  test_auto_index.py  test_contracts.py  test_extension_actuator.py  test_extension_runtime.py  test_gate_spike_live.py  (+10 more)
agent/probes/: recreation_axtree_probe.py  recreation_cell_click_probe.py  recreation_decide_resolve_probe.py  recreation_e2e_probe.py  recreation_ingest_resolve_probe.py  recreation_multidoc_calib.py  recreation_planner_verify.py  recreation_resolve_probe.py  recreation_score_calib.py  recreation_search_overlay_probe.py
agent/spike/: README.md  __init__.py  actuator_min.py  gate_harness.py  graph.py  tts_vertex.py  voice_agent.py
(+100 files in other folders)
